HOME-241 - Create login and registration process

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,6 +1,6 @@
 version: "3"
 services:
   mongodb:
-    image: oszura/sh-panel-mongodb
+    image: oszura/shpanel-mongodb
     ports:
       - "27017:27017"
