HOME-246 - Allow CORS request for shpanel

--- a/.eslintrc
+++ b/.eslintrc
@@ -15,7 +15,10 @@
     "fetch": true,
     "WebSocket": true,
     "cy": true,
-    "Cypress": true
+    "Cypress": true,
+    "Headers": true,
+    "Request": true,
+    "btoa": true
   },
   "env": {
     "jest": true
