--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -1,53 +1,27 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  annotations:
-    deployment.kubernetes.io/revision: "1"
-  creationTimestamp: null
-  generation: 1
-  labels:
-    app: smarthome-server
-  name: smarthome-server
-  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/shpanel
+  name: smarthome
 spec:
-  progressDeadlineSeconds: 600
   replicas: 1
-  revisionHistoryLimit: 10
   selector:
     matchLabels:
-      app: shpanel
-  strategy:
-    rollingUpdate:
-      maxSurge: 25%
-      maxUnavailable: 25%
-    type: RollingUpdate
+      app: smarthome
   template:
     metadata:
-      creationTimestamp: null
       labels:
-        app: shpanel
+        app: smarthome
     spec:
       containers:
-        - image: oszura/shpanel-prod
+        - image: oszura/sh-panel-prod
           imagePullPolicy: Always
-          name: shpanel-prod
-          resources: {}
-          terminationMessagePath: /dev/termination-log
-          terminationMessagePolicy: File
+          name: sh-panel-prod
         - image:  mongo:latest
           imagePullPolicy: Always
-          name: shpanel-prod-mongodb
-          resources: {}
-          terminationMessagePath: /dev/termination-log
-          terminationMessagePolicy: File
+          name: sh-panel-prod-mongodb
           volumeMounts:
             - mountPath: /data/db
               name: mongo-db
-      dnsPolicy: ClusterFirst
-      restartPolicy: Always
-      schedulerName: default-scheduler
-      securityContext: {}
-      terminationGracePeriodSeconds: 30
       volumes:
         - name: mongo-db
           hostPath:
