--- a/kubernetes/service.yaml
+++ b/kubernetes/service.yaml
@@ -3,6 +3,8 @@ kind: Service
 metadata:
   name: sh-panel
 spec:
+  nodeSelector:
+    dedicated: master
   externalIPs:
     - 192.168.2.117
   ports:
