HOME-251 - Adjust 'shpanel' docker image

--- a/docker/sh-panel/prod/Dockerfile
+++ b/docker/sh-panel/prod/Dockerfile
@@ -7,6 +7,6 @@ RUN mkdir -p /root/go/src/github.com/smart-evolution/shpanel/views
 ADD ./public /root/go/src/github.com/smart-evolution/shpanel/public
 ADD ./views /root/go/src/github.com/smart-evolution/shpanel/views
 COPY ./shpanel /root/go/src/github.com/smart-evolution/shpanel/
-COPY ./docker/prod/entrypoint.sh /root/scripts/
+COPY ./docker/sh-panel/prod/entrypoint.sh /root/scripts/
 
 ENTRYPOINT /root/scripts/entrypoint.sh
