HOME-251 - Adjust 'shpanel' docker image

--- a/docker/sh-panel/prod/Dockerfile
+++ b/docker/sh-panel/prod/Dockerfile
@@ -1,8 +1,8 @@
 FROM debian:buster
 
 # Set env variables
-ENV SH_MONGO_URI=mongodb://172.18.0.2:27017 \
-SH_MONGO_DB=shpanel \
+ENV SH_PANEL_MONGO_URI=mongodb://172.18.0.2:27017 \
+SH_PANEL_MONGO_DB=shpanel \
 SH_PANEL_PORT=3223
 
 RUN mkdir -p /root/scripts
