HOME-251 - Adjust 'shpanel' docker image

--- a/docker/sh-panel/prod/Dockerfile
+++ b/docker/sh-panel/prod/Dockerfile
@@ -1,7 +1,7 @@
 FROM debian:buster
 
 # Set env variables
-ENV SH_PANEL_MONGO_URI=mongodb://172.18.0.2:27017 \
+ENV SH_PANEL_MONGO_URI=mongodb://localhost:27017 \
 SH_PANEL_MONGO_DB=shpanel \
 SH_PANEL_PORT=3223
 
