HOME-251 - Adjust 'shpanel' docker image

--- a/docker/sh-panel/prod/Dockerfile
+++ b/docker/sh-panel/prod/Dockerfile
@@ -3,7 +3,8 @@ FROM debian:buster
 # Set env variables
 ENV SH_PANEL_MONGO_URI=mongodb://localhost:27017 \
 SH_PANEL_MONGO_DB=shpanel \
-SH_PANEL_PORT=3223
+SH_PANEL_PORT=3223 \
+SH_API_PORT=3222
 
 RUN mkdir -p /root/scripts
 RUN mkdir -p /root/go/src/github.com/smart-evolution/shpanel/public
