--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       nodeName: raspberrypi
       containers:
-        - image: oszura/sh-panel-prod
+        - image: oszura/sh-panel-prod:v0.0.2
           imagePullPolicy: IfNotPresent
           name: sh-panel
         - image: mongo:latest
