--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -12,7 +12,7 @@ spec:
       labels:
         app: sh-panel
     spec:
-      nodeName: raspberrypi
+      nodeName: debian
       containers:
         - image: oszura/sh-panel-prod:v0.0.2
           imagePullPolicy: IfNotPresent
