--- a/docker/sh-panel/prod/Dockerfile
+++ b/docker/sh-panel/prod/Dockerfile
@@ -4,7 +4,7 @@ FROM debian:buster
 ENV SH_PANEL_MONGO_URI=mongodb://localhost:27017 \
 SH_PANEL_MONGO_DB=shpanel \
 SH_HTTP_PORT=3223 \
-SH_API_PORT=3222
+SH_API_SRV_PORT=3222
 
 RUN mkdir -p /root/scripts
 RUN mkdir -p /root/go/src/github.com/smart-evolution/shpanel/public
