HOME-258 - Move SH-API to Debian

--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -26,5 +26,5 @@ spec:
       volumes:
         - name: mongo-db
           hostPath:
-            path: /data/db-backup
+            path: /data/db-shpanel
             type: Directory
