--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ go:
 
 env:
   - GO111MODULE=on
+  - APP_VERSION=v1.1.0
 
 install:
   - sudo apt-get update
@@ -27,7 +28,7 @@ script:
 
 after_success:
   - echo "$DOCKER_PASS" | docker login -u "$DOCKER_LOGIN" --password-stdin
-  - make image IMAGE_NAME=sh-panel ENV=prod V=v1.1.0
+  - make image IMAGE_NAME=sh-panel ENV=prod V=$(APP_VERSION)
   - docker push oszura/sh-panel-prod
-  - make image IMAGE_NAME=sh-panel ENV=dev V=v1.1.0
+  - make image IMAGE_NAME=sh-panel ENV=dev V=$(APP_VERSION)
   - docker push oszura/sh-panel-dev
