--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,9 @@ go:
   - 1.x
 
 env:
-  - GO111MODULE=on
-  - APP_VERSION=v1.1.0
+  - GO111MODULE=on APP_VERSION=v1.1.0
 
 install:
-  - echo "TRC = $TRAVIS_COMMIT"
   - sudo apt-get update
   - sudo apt-get install libgconf-2-4 # required by Cypress
   - . $HOME/.nvm/nvm.sh
@@ -28,8 +26,12 @@ script:
   - make all ENV=prod
 
 after_success:
-  - echo "$DOCKER_PASS" | docker login -u "$DOCKER_LOGIN" --password-stdin
-  - make image IMAGE_NAME=sh-panel ENV=prod V=$(APP_VERSION)
-  - docker push oszura/sh-panel-prod
-  - make image IMAGE_NAME=sh-panel ENV=dev V=$(APP_VERSION)
-  - docker push oszura/sh-panel-dev
+  - |
+    if [[ "$TRAVIS_BRANCH" = "master" && "$TRAVIS_TAG" != "" ]]
+    then
+      echo "$DOCKER_PASS" | docker login -u "$DOCKER_LOGIN" --password-stdin && \
+      make image IMAGE_NAME=sh-panel ENV=prod V=$(APP_VERSION) && \
+      docker push oszura/sh-panel-prod && \
+      make image IMAGE_NAME=sh-panel ENV=dev V=$(APP_VERSION) && \
+      docker push oszura/sh-panel-dev
+    fi
