--- a/.travis.yml
+++ b/.travis.yml
@@ -23,14 +23,11 @@ before_script:
     fi
 
 script:
-  - echo $TRAVIS_COMMIT
-  - echo $TRAVIS_TAG
-  - echo $TRAVIS_BRANCH
   - make all ENV=prod
 
 after_success:
   - |
-    if [[ ("$TRAVIS_PULL_REQUEST" == "true") && ($TRAVIS_COMMIT_MESSAGE =~ ^Build.*) ]]
+    if [[ ($TRAVIS_COMMIT_MESSAGE =~ ^Build.*) ]]
     then
       echo "$DOCKER_PASS" | docker login -u "$DOCKER_LOGIN" --password-stdin && \
       make image IMAGE_NAME=sh-panel ENV=prod V=$(APP_VERSION) && \
