--- a/.travis.yml
+++ b/.travis.yml
@@ -4,14 +4,14 @@ go:
   - 1.x
 
 env:
-  - GO111MODULE=on
+  - GO111MODULE=on APP_VERSION=v1.1.0
 
 install:
   - sudo apt-get update
   - sudo apt-get install libgconf-2-4 # required by Cypress
   - . $HOME/.nvm/nvm.sh
   - nvm install
-  - make install
+  - make deps
 
 before_script:
   - make lint
@@ -20,4 +20,18 @@ before_script:
     if [[ $IS_INTEGRATION_TESTS == "true" ]]
     then
       make integration-test
+    fi
+
+script:
+  - make all ENV=prod
+
+after_success:
+  - |
+    if [[ ($TRAVIS_PULL_REQUEST == "false") && ($TRAVIS_COMMIT_MESSAGE =~ ^Build.*) ]]
+    then
+      echo "$DOCKER_PASS" | docker login -u "$DOCKER_LOGIN" --password-stdin
+      make image IMAGE_NAME=sh-panel ENV=prod V=$(APP_VERSION)
+      docker push oszura/sh-panel-prod
+      make image IMAGE_NAME=sh-panel ENV=dev V=$(APP_VERSION)
+      docker push oszura/sh-panel-dev
     fi
