--- a/.editorconfig
+++ b/.editorconfig
@@ -31,3 +31,7 @@ indent_size = 2
 [{package.json,.travis.yml}]
 indent_style = space
 indent_size = 2
+
+# Use tabs for indentation (Makefiles require tabs)
+[Makefile]
+indent_style = tab
