--- a/.travis.yml
+++ b/.travis.yml
@@ -30,8 +30,8 @@ after_success:
     if [[ ($TRAVIS_PULL_REQUEST == "false") && ($TRAVIS_COMMIT_MESSAGE =~ ^Build.*) ]]
     then
       echo "$DOCKER_PASS" | docker login -u "$DOCKER_LOGIN" --password-stdin
-      make image IMAGE_NAME=sh-panel ENV=prod V=$(APP_VERSION)
+      make image IMAGE_NAME=sh-panel ENV=prod V=$APP_VERSION
       docker push oszura/sh-panel-prod
-      make image IMAGE_NAME=sh-panel ENV=dev V=$(APP_VERSION)
+      make image IMAGE_NAME=sh-panel ENV=dev V=$APP_VERSION
       docker push oszura/sh-panel-dev
     fi
