--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,8 @@ after_success:
       make image IMAGE_NAME=sh-panel ENV=dev V=$APP_VERSION
       docker push oszura/sh-panel-dev
     fi
+  - bash scripts/deploy.sh
 
 deploy:
   provider: script
-  script: ./scripts/deploy.sh
+  script: bash scripts/deploy.sh
