--- a/.travis.yml
+++ b/.travis.yml
@@ -21,16 +21,16 @@ before_script:
   - make test
   - |
     echo "$DOCKER_PASS" | docker login -u "$DOCKER_LOGIN" --password-stdin
-    #docker pull oszura/sh-influxdb:latest
+    docker pull oszura/sh-influxdb:latest
     docker pull mongo:latest
-    #docker pull oszura/sh-api-prod:v2.2.4
+    docker pull oszura/sh-api-prod:v2.2.4
     docker pull oszura/sh-panel-prod:v1.2.2
-    docker run -d --net=host -p "27017:27017" mongo:latest
-    docker ps
+    docker run -d --net=host mongo:latest
+    docker run -d --net=host oszura/sh-influxdb:v1.0.0
     sleep 10
-    docker ps
-    docker run --net=host -p "3223:3223" oszura/sh-panel-prod:v1.2.2
-    #cd docker/sh-panel/test && docker-compose --verbose up
+    docker run -d --net=host oszura/sh-api-prod:v2.2.4
+    sleep 5
+    docker run --net=host oszura/sh-panel-prod:v1.2.2
 
 script:
   - make all ENV=prod
