--- a/.travis.yml
+++ b/.travis.yml
@@ -21,18 +21,18 @@ before_script:
   - make test
   - |
     echo "$DOCKER_PASS" | docker login -u "$DOCKER_LOGIN" --password-stdin
-    docker pull oszura/sh-influxdb:latest
     docker pull mongo:latest
-    docker pull oszura/sh-api-prod:v2.2.4
-    docker pull oszura/sh-panel-prod:v1.2.2
-    docker pull oszura/sh-panel-dev:v1.2.2
     docker run -d --net=host mongo:latest
+    docker pull oszura/sh-influxdb:v1.0.0
     docker run -d --net=host oszura/sh-influxdb:v1.0.0
     sleep 10
+    docker pull oszura/sh-api-prod:v2.2.4
     docker run -d --net=host oszura/sh-api-prod:v2.2.4
     sleep 5
+    docker pull oszura/sh-panel-prod:v1.2.2
     docker run -d --net=host oszura/sh-panel-prod:v1.2.2
     sleep 5
+    docker pull oszura/sh-panel-dev:v1.2.2
     docker run -d --name=test --net=host -v $(pwd):/root/go/src/github.com/smart-evolution/shpanel oszura/sh-panel-dev:v1.2.2
     docker exec test "cd /root/go/src/github.com/smart-evolution/shpanel"
     docker exec npm run cypress:run
