--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ before_script:
     docker run -d --net=host oszura/sh-panel-prod:v1.2.2
     sleep 5
     docker pull oszura/sh-panel-dev:v1.2.2
-    docker run -d --name=test --net=host -v $(pwd):/root/go/src/github.com/smart-evolution/shpanel oszura/sh-panel-dev:v1.2.2
+    docker run -d -it --name=test --net=host -v $(pwd):/root/go/src/github.com/smart-evolution/shpanel oszura/sh-panel-dev:v1.2.2
     docker exec test "cd /root/go/src/github.com/smart-evolution/shpanel"
     docker exec test "npm run cypress:run"
 
