--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,8 @@ before_script:
     docker pull oszura/sh-panel-prod:v1.2.2
     docker run -d --net=host oszura/sh-panel-prod:v1.2.2
     sleep 5
-    docker run -v --net=host -v $(pwd):/root/go/src/github.com/smart-evolution/shpanel oszura/sh-panel-test:v1.2.2
+    npm run cypress:run
+    #docker run -v --net=host -v $(pwd):/root/go/src/github.com/smart-evolution/shpanel oszura/sh-panel-test:v1.2.2
 
 script:
   - make all ENV=prod
