--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ go:
 env:
   - GO111MODULE=on APP_VERSION=v1.2.2
 
+services:
+  - docker
+
 install:
   - sudo apt-get update
   - sudo apt-get install libgconf-2-4 # required by Cypress
@@ -17,10 +20,19 @@ before_script:
   - make lint
   - make test
   - |
-    if [[ $IS_INTEGRATION_TESTS == "true" ]]
-    then
-      make integration-test
-    fi
+    echo "$DOCKER_PASS" | docker login -u "$DOCKER_LOGIN" --password-stdin
+    docker pull mongo:latest
+    docker run -d --net=host mongo:latest
+    docker pull oszura/sh-influxdb:v1.0.0
+    docker run -d --net=host oszura/sh-influxdb:v1.0.0
+    sleep 10
+    docker pull oszura/sh-api-prod:v2.2.4
+    docker run -d --net=host oszura/sh-api-prod:v2.2.4
+    sleep 5
+    make image IMAGE_NAME=sh-panel ENV=prod V=$APP_VERSION
+    docker run -d --net=host oszura/sh-panel-prod:$APP_VERSION
+    sleep 5
+    npm run cypress:run
 
 script:
   - make all ENV=prod
@@ -30,7 +42,6 @@ after_success:
     if [[ ($TRAVIS_PULL_REQUEST == "false") && ($TRAVIS_COMMIT_MESSAGE =~ ^Build.*) ]]
     then
       echo "$DOCKER_PASS" | docker login -u "$DOCKER_LOGIN" --password-stdin
-      make image IMAGE_NAME=sh-panel ENV=prod V=$APP_VERSION
       docker push oszura/sh-panel-prod
       make image IMAGE_NAME=sh-panel ENV=dev V=$APP_VERSION
       docker push oszura/sh-panel-dev
