HOME-273 - After adding agent form should be cleaned

--- a/.eslintrc
+++ b/.eslintrc
@@ -18,7 +18,8 @@
     "Cypress": true,
     "Headers": true,
     "Request": true,
-    "btoa": true
+    "btoa": true,
+    "before": true
   },
   "env": {
     "jest": true
