HOME-273 - After adding agent form should be cleaned

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,7 @@ before_script:
     make image IMAGE_NAME=sh-panel ENV=prod V=$APP_VERSION
     docker run -d --net=host oszura/sh-panel-prod:$APP_VERSION
     sleep 5
+    docker ps
     npm run cypress:run
 
 script:
