HOME-273 - After adding agent form should be cleaned

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,6 @@ before_script:
   - make lint
   - make test
   - |
-    exit 1
     make all ENV=prod
     echo "$DOCKER_PASS" | docker login -u "$DOCKER_LOGIN" --password-stdin
     docker pull mongo:latest
@@ -35,10 +34,10 @@ before_script:
     docker run -d --net=host oszura/sh-panel-prod:$APP_VERSION
     sleep 5
     npm run cypress:run
-    make image IMAGE_NAME=sh-panel ENV=dev V=$APP_VERSION
 
 script:
   - make all ENV=prod
+  - make image IMAGE_NAME=sh-panel ENV=dev V=$APP_VERSION
 
 after_success:
   - |
