HOME-273 - After adding agent form should be cleaned

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,10 @@ install:
 before_script:
   - make lint
   - make test
+
+script:
+  - make all ENV=prod
   - |
-    make all ENV=prod
     echo "$DOCKER_PASS" | docker login -u "$DOCKER_LOGIN" --password-stdin
     docker pull mongo:latest
     docker run -d --net=host mongo:latest
@@ -30,19 +32,17 @@ before_script:
     docker pull oszura/sh-api-prod:v2.2.4
     docker run -d --net=host oszura/sh-api-prod:v2.2.4
     sleep 5
-    make image IMAGE_NAME=sh-panel ENV=prod V=$APP_VERSION
+  - make image IMAGE_NAME=sh-panel ENV=prod V=$APP_VERSION
+  - |
     docker run -d --net=host oszura/sh-panel-prod:$APP_VERSION
     sleep 5
     npm run cypress:run
-
-script:
-  - make all ENV=prod
-  - make image IMAGE_NAME=sh-panel ENV=dev V=$APP_VERSION
 
 after_success:
   - |
     if [[ ($TRAVIS_PULL_REQUEST == "false") && ($TRAVIS_COMMIT_MESSAGE =~ ^Build.*) ]]
     then
+      make image IMAGE_NAME=sh-panel ENV=dev V=$APP_VERSION
       docker push oszura/sh-panel-prod
       docker push oszura/sh-panel-dev
     fi
