--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -17,10 +17,16 @@ spec:
         - image: oszura/sh-panel-prod:v1.2.3
           imagePullPolicy: IfNotPresent
           name: sh-panel
+          env:
+            - name: NOTIFIER_URL
+              value: $(NOTIFIER_URL)
           lifecycle:
             postStart:
               exec:
-                command: ["/bin/sh", "-c", "NOTIFIER_MSG=sh-panel $GOPATH/src/github.com/smart-evolution/smarthome-kubernetes/deployment-notifier.sh"]
+                command: ["/bin/sh", "-c", "NOTIFIER_MSG=sh-panel /kubernetes/deployment-notifier.sh"]
+          volumeMounts:
+            - mountPath: /kubernetes
+              name: kubernetes
         - image: mongo:latest
           imagePullPolicy: IfNotPresent
           name: sh-mongodb
@@ -31,4 +37,8 @@ spec:
         - name: mongo-db
           hostPath:
             path: /data/db-shpanel
+            type: Directory
+        - name: kubernetes
+          hostPath:
+            path: $(GOPATH)/src/github.com/smart-evolution/smarthome/smarthome-kubernetes
             type: Directory
