--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -23,10 +23,7 @@ spec:
           lifecycle:
             postStart:
               exec:
-                command: ["/bin/sh", "-c", "NOTIFIER_MSG=sh-panel /kubernetes/deployment-notifier.sh"]
-          volumeMounts:
-            - mountPath: /kubernetes
-              name: kubernetes
+                command: ["/bin/sh", "-c", 'curl -X POST -H "Content-type: application/json" --data "{\"text\":\"sh-panel\"}" $(NOTIFIER_URL)']
         - image: mongo:latest
           imagePullPolicy: IfNotPresent
           name: sh-mongodb
@@ -37,8 +34,4 @@ spec:
         - name: mongo-db
           hostPath:
             path: /data/db-shpanel
-            type: Directory
-        - name: kubernetes
-          hostPath:
-            path: "$(GOPATH)/src/github.com/smart-evolution/smarthome/smarthome-kubernetes"
             type: Directory
