--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -17,6 +17,10 @@ spec:
         - image: oszura/sh-panel-prod:v1.2.3
           imagePullPolicy: IfNotPresent
           name: sh-panel
+          lifecycle:
+            postStart:
+              exec:
+                command: ["/bin/sh", "-c", 'curl -X POST -H "Content-type: application/json" --data "{\"text\":\"sh-panel deployed\"}" NOTIFIER_URL']
         - image: mongo:latest
           imagePullPolicy: IfNotPresent
           name: sh-mongodb
