--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,7 @@ script:
   - |
     docker run -d --net=host oszura/sh-panel-prod:$APP_VERSION
     sleep 5
+    docker ps
     npm run cypress:run
 
 after_success:
