--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "homepage": "https://github.com/smart-evolution/sh-panel#readme",
   "dependencies": {
     "d3": "^5.15.0",
-    "graphen": "^1.3.7",
+    "graphen": "^1.3.9",
     "history": "^4.7.2",
     "lodash": "^4.17.5",
     "moment": "^2.21.0",
@@ -53,7 +53,7 @@
     "babel-cli": "^6.26.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
-    "css-loader": "^0.25.0",
+    "css-loader": "^3.4.1",
     "cypress": "^3.8.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
@@ -67,7 +67,7 @@
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.17.0",
-    "file-loader": "^2.0.0",
+    "file-loader": "^5.0.2",
     "flow-bin": "^0.94.0",
     "jest": "^24.1.0",
     "mini-css-extract-plugin": "^0.4.4",
@@ -79,6 +79,7 @@
     "stylelint": "^9.6.0",
     "stylelint-config-standard": "^18.2.0",
     "uglifyjs-webpack-plugin": "^2.0.1",
+    "url-loader": "^3.0.0",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
   }
