--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "homepage": "https://github.com/smart-evolution/sh-panel#readme",
   "dependencies": {
     "d3": "^5.15.0",
-    "graphen": "^1.5.0",
+    "graphen": "^1.6.2",
     "history": "^4.7.2",
     "lodash": "^4.17.5",
     "moment": "^2.21.0",
@@ -53,6 +53,7 @@
     "babel-cli": "^6.26.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.4",
+    "classnames": "^2.2.6",
     "css-loader": "^3.4.2",
     "cypress": "^3.8.3",
     "enzyme": "^3.11.0",
