--- a/package.json
+++ b/package.json
@@ -58,9 +58,18 @@
     "cypress": "^3.8.3",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
-    "enzyme-to-json": "^3.5.0",
+    "enzyme-to-json": "^3.6.1",
     "eslint": "^5.14.1",
-    "eslint-config-codait": "^1.0.3",
+    "eslint-config-airbnb": "^12.0.0",
+    "eslint-config-codait": "^1.0.6",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-cypress": "^2.11.2",
+    "eslint-plugin-flowtype": "^3.9.0",
+    "eslint-plugin-import": "^1.16.0",
+    "eslint-plugin-jest": "^22.21.0",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.5",
     "file-loader": "^5.1.0",
     "flow-bin": "^0.94.0",
     "jest": "^24.1.0",
