--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
   "homepage": "https://github.com/smart-evolution/sh-panel#readme",
   "dependencies": {
     "d3": "^5.16.0",
-    "graphen": "^1.7.2",
+    "graphen": "^1.8.5",
     "history": "^4.7.2",
-    "lodash": "^4.17.5",
-    "moment": "^2.25.1",
+    "lodash": "^4.17.20",
+    "moment": "^2.29.0",
     "prop-types": "^15.6.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -42,37 +42,39 @@
     "redux-saga": "^0.16.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.6",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
-    "@babel/plugin-proposal-optional-chaining": "^7.9.0",
-    "@babel/preset-env": "^7.9.6",
-    "@babel/preset-flow": "^7.9.0",
-    "@babel/preset-react": "^7.9.1",
+    "@babel/core": "^7.11.6",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.10.4",
+    "@babel/plugin-proposal-optional-chaining": "^7.11.0",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-flow": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
     "autoprefixer": "^6.5.0",
     "babel-cli": "^6.26.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "classnames": "^2.2.6",
-    "css-loader": "^3.5.3",
+    "css-loader": "^3.6.0",
     "cypress": "^3.8.3",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
-    "enzyme-to-json": "^3.4.4",
+    "enzyme-adapter-react-16": "^1.15.5",
+    "enzyme-to-json": "^3.6.1",
     "eslint": "^5.14.1",
     "eslint-config-airbnb": "^12.0.0",
+    "eslint-config-codait": "^1.0.6",
     "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-cypress": "^2.11.2",
     "eslint-plugin-flowtype": "^3.9.0",
     "eslint-plugin-import": "^1.16.0",
     "eslint-plugin-jest": "^22.21.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.5",
     "file-loader": "^5.1.0",
     "flow-bin": "^0.94.0",
     "jest": "^24.1.0",
     "mini-css-extract-plugin": "^0.4.4",
-    "node-sass": "^4.14.0",
+    "node-sass": "^4.14.1",
     "postcss-loader": "^3.0.0",
     "prettier": "^1.19.1",
     "sass-loader": "^7.1.0",
@@ -81,7 +83,7 @@
     "stylelint-config-standard": "^18.2.0",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "url-loader": "^3.0.0",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12"
   }
 }
