--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "csslint": "stylelint ./client/**/*.scss",
     "csslint:fix": "stylelint ./client/**/*.scss --fix",
     "tsc": "tsc",
-    "prettify": "prettier --write \"./client/**/*.{js,jsx}\"",
+    "prettify": "prettier --write \"./client/**/*.{js,jsx,ts,tsx,scss}\" \"./cypress/**/*.{js,jsx,ts,tsx}\"",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run --browser chrome"
   },
@@ -81,7 +81,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "file-loader": "^5.1.0",
     "flow-bin": "^0.94.0",
-    "jest": "^24.1.0",
+    "jest": "^27.0.7",
     "mini-css-extract-plugin": "^0.4.4",
     "node-sass": "^4.14.1",
     "postcss-loader": "^3.0.0",
@@ -90,6 +90,7 @@
     "style-loader": "^0.13.1",
     "stylelint": "^9.6.0",
     "stylelint-config-standard": "^18.2.0",
+    "ts-jest": "^27.0.7",
     "typescript": "^4.4.4",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "url-loader": "^3.0.0",
