--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "noEmit": true,
     "jsx": "react",
     "baseUrl": "./",
-    "allowJs": true,
+  //  "allowJs": true,
     "skipLibCheck": true,
   }
 }
